[gd_scene load_steps=13 format=2]

[ext_resource path="res://Rainbow/Rainbow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Map/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://GamePlay/GamePlay.gd" type="Script" id=3]
[ext_resource path="res://Cannon/Cannon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mountain/MountainSlope.tscn" type="PackedScene" id=5]
[ext_resource path="res://Font/Penguin-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=7]
[ext_resource path="res://Ball/ball_energy.wav" type="AudioStream" id=8]
[ext_resource path="res://Laser/Laser.gd" type="Script" id=9]
[ext_resource path="res://GameMusic.wav" type="AudioStream" id=10]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 2
outline_color = Color( 0.556863, 0.498039, 0.854902, 1 )
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="BackgroundColor" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.168396
margin_top = 0.0819967
margin_right = 0.168457
margin_bottom = 0.0820312
color = Color( 0.247059, 0.231373, 0.32549, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
margin_bottom = 133.0
color = Color( 0.164706, 0.160784, 0.203922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePlay" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="Map" parent="GamePlay" instance=ExtResource( 2 )]

[node name="Rainbow" parent="GamePlay" instance=ExtResource( 1 )]
position = Vector2( 544.384, 482.435 )

[node name="MountainSlope" parent="GamePlay" instance=ExtResource( 5 )]

[node name="Cannon" parent="GamePlay" instance=ExtResource( 4 )]

[node name="Laser" type="Line2D" parent="GamePlay"]
width = 5.0
default_color = Color( 0.988235, 0.988235, 0.992157, 0.317647 )
gradient = SubResource( 1 )
joint_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource( 9 )

[node name="PlayerEnergy" type="AudioStreamPlayer" parent="GamePlay"]
stream = ExtResource( 8 )

[node name="EnvironmentMusic" type="AudioStreamPlayer" parent="GamePlay"]
stream = ExtResource( 10 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="ScoreLayout" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
margin_left = 60.0
margin_top = 71.0
margin_right = -60.0
margin_bottom = 61.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Columns" type="HBoxContainer" parent="HUD/ScoreLayout"]
margin_right = 960.0
margin_bottom = 61.0

[node name="Score" type="Label" parent="HUD/ScoreLayout/Columns"]
margin_right = 47.0
margin_bottom = 61.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "0"
valign = 3

[node name="BestScore" type="Label" parent="HUD/ScoreLayout/Columns"]
margin_left = 913.0
margin_right = 960.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
text = "0"
[connection signal="on_game_over" from="GamePlay" to="HUD" method="_on_GamePlay_on_game_over"]
[connection signal="on_rock_destroyed" from="GamePlay" to="HUD" method="_on_GamePlay_on_rock_destroyed"]
